--- a/ProductService/package.json
+++ b/ProductService/package.json
@@ -12,6 +12,7 @@
     "async": "^0.9.0",
     "bcrypt-nodejs": "latest",
     "connect-flash": "~0.1.1",
+    "domain": "^0.2.8",
     "ejs": "~0.8.5",
     "ejs-locals": "^1.0.2",
     "express": "~3.4.4",
